--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 			}
 			
 			h1{
-				font-size: 60px;
+				font-size: 4rem;
 				line-height: 0.5;
 			}
 			
 			h2{
-				line-height: 0.5;
+				line-height: 2rem;
 			}
 			
 			h3{
-				font-size: 30px;
+				font-size: 1rem;
 				line-height: 0.5;
 			}
 			
