--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 			}
 			
 			h2{
-				line-height: 2rem;
+				line-height: 0.5;
 			}
 			
 			h3{
-				font-size: 1rem;
+				font-size: 2rem;
 				line-height: 0.5;
 			}
 			
 			li{
-				font-size: 20px;
+				font-size: 1rem;
 				padding:10
 			}
 		</style>
