--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>StudyLink-Роман</title>
+		<link rel="icon" href="https://preview.redd.it/ifu7by3krwu41.png?auto=webp&s=bd128edb33a61cefb8961fe7fb04ee486a261b49">
 		<style>
 			body{
 				background: black;
